--- a/app.wxss
+++ b/app.wxss
@@ -29,14 +29,23 @@ form{
 
 .container {
   height: 100%;
-  width: 96%;
-  /* padding:0rpx; */
+  width: 95%;
   margin: 0rpx auto;
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: space-between; */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
   /* padding: 10rpx; */
   /* box-sizing: border-box; */
   /* border: 1rpx solid red; */
+}
+
+.row {
+  /* border: 1rpx solid red; */
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20rpx;
 }
