--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -1,5 +1,10 @@
 .canvas {
-  margin-top: 20rpx;
+  margin-top: 20rpx; 
   width: 100%;
-  height: 1100rpx;
+  height: 1000rpx;
+  /* position: absolute;
+  top: 200rpx; 
+  bottom: 0;
+  left: 0;
+  right: 0; */
 }
